# test_fullstack_app

./: .gitignore  pyproject.toml
backend/: main.py  static.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/Components/Grid/: Grid.js
frontend/src/Components/Logo/: Logo.css  Logo.js
frontend/src/Components/Table/: Table.css  Table.js
