[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["AgafonovSiberia <agafonov@chita.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
